
                              Kiji Scoring Release Notes
Version 0.10.0
    * SCORE-135. kiji-scoring-server has been removed from kiji-scoring to avoid a circular
        dependency. It now lives in its own project at github.com/kijiproject/kiji-scoring-server.

Version 0.9.0
    * SCORE-130. Adds a mutable, per thread kvstore to scoring server.

Version 0.8.0
    * SCORE-120. FreshKijiTableReader now supports providing an ExecutorService to use as the
        thread pool backing the reader. If unspecified, the reader will use the singleton service
        defined in FreshenerThreadPool.

Version 0.7.0
    * SCORE-128. InternalFreshKijiTableReader now uses a reader pool to read data to check for
        freshness and score in order to guarantee thread safety. The pool size defaults to the same
        as the FreshenerThreadPool size.
    * SCORE-118. InternalFreshKijiTableReader now includes DEBUG level log messages for important
        events. Enable these messages through your slf4j configuration.
    * SCORE-117. ScoreFunction.score() now returns a TimestampedValue which optionally specifies the
        timestamp at which the value should be written to Kiji.
    * SCORE-113. KijiScoring now includes a KijiProducer implementation called
        org.kiji.scoring.lib.produce.ScoreFunctionProducer which can run a ScoreFunction in batch.
        ScoreFunctions to be run in batch must meet certain requirements which are detailed in
        ScoreFunctionProducer's JavaDoc.
    * SCORE-112. FreshKijiTableReader.get(EntityId, KijiDataRequest, long) has been replaced by
        get(EntityId, KijiDataRequest, org.kiji.scoring.FreshKijiTableReader.FreshRequestOptions)
        which allows for the specification of an overriding timestamp and string-string parameters
        which will override parameters available to the KijiFreshnessPolicy and ScoreFunction for
        this request only.