@@ -49,6 +49,6 @@ public final class AlwaysFreshen extends KijiFreshnessPolicy {
   /** {@inheritDoc} */
   @Override
   public boolean isFresh(KijiRowData rowData, FreshenerContext context) {
-    return false;
+    return STALE;
   }
 }
