@@ -1,6 +1,8 @@
 
                               Kiji Scoring Release Notes
 Version 0.10.0
+    * SCORE-139. KijiFreshnessPolicy now includes static constants named FRESH and STALE which can
+        be returned from isFresh() to indicate that the data read was fresh or stale respectively.
     * SCORE-135. kiji-scoring-server has been removed from kiji-scoring to avoid a circular
         dependency. It now lives in its own project at github.com/kijiproject/kiji-scoring-server.
 
